fixed truncated role

--- a/src/app/components/unit-block/unit-block.component.scss
+++ b/src/app/components/unit-block/unit-block.component.scss
@@ -170,8 +170,8 @@
         position: absolute;
         color: black;
         left: -17px;
-        top: 2px;
-        bottom: 2px;
+        top: -4px;
+        bottom: -5px;
         line-height: 1;
         text-align: center;
         white-space: nowrap;
